FIXED THE ALIGNMENT

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -88,7 +88,7 @@ nav img {
 /* START ADD-TO-CART HOVER */
 
 .grid {
-  padding: 10px;
+  /*padding: 10px;*/
   max-width: 1300px;
   margin: 0 auto;
   list-style: none;
